tablet and mobile responsive aligned correct

--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -1,4 +1,4 @@
-@media screen and (min-width: 821px) {
+@media screen and (min-width: 991px) {
   .container {
     display: flex;
     flex-direction: row;
@@ -54,7 +54,11 @@
 
   .details h1 {
     font-weight: 700;
-    width: 350px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
   .heading-color {
     color: #c21010;
@@ -65,11 +69,11 @@
   }
 }
 
-@media only screen and (min-width: 481px) and (max-device-width: 820px) {
+@media only screen and (min-width: 481px) and (max-device-width: 990px) {
   .image img {
     width: 250px;
-    height: 270px;
     margin: auto;
+    height: 270px;
     margin-top: 10%;
   }
   .details {
